<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_25"
        android:layout_marginStart="@dimen/margin_25"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07" />

        <ImageView
            android:layout_width="@dimen/margin_180"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_10"
            android:layout_weight="0.2"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/logo_bg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.14" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_weight="0.08"
            android:background="@drawable/border_bg"
            android:hint="@string/username"
            android:inputType="number"
            android:paddingEnd="@dimen/margin_8"
            android:paddingStart="@dimen/margin_8"
            android:textSize="@dimen/margin_13"
            android:textColorHint="@color/button_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_weight="0.08"
            android:background="@drawable/border_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/margin_8"
            android:paddingStart="@dimen/margin_8"
            android:textSize="@dimen/margin_13"
            android:textColorHint="@color/button_bg" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_weight="0.07"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:textSize="@dimen/margin_15"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:text="@string/login"
            android:background="@drawable/login_register_selector"
            android:textColor="@color/button_bg"
            android:textSize="@dimen/margin_13" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.8dp"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:background="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/margin_13" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.8dp"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:background="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:text="@string/register"
            android:textColor="@color/button_bg"
            android:textSize="@dimen/margin_13"
            android:background="@drawable/login_register_selector" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05" />
    </LinearLayout>
</LinearLayout>